<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <item
        android:id="@+id/action_location"
        android:enabled="true"
        android:icon="@drawable/ic_my_location_white_24dp"
        android:title="@string/menu_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_name"
        android:enabled="true"
        android:icon="@drawable/ic_text_format_white_24dp"
        android:title="@string/menu_name"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_postcode"
        android:enabled="true"
        android:icon="@drawable/ic_location_on_white_24dp"
        android:title="@string/menu_postcode"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recent"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/menu_recent"
        app:showAsAction="ifRoom" />
</menu>
