<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_name"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/rating" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_address"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/rating" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="30dp"
        android:layout_below="@+id/address"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/rating" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/list_rating"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:maxWidth="250dip"
        android:maxHeight="170dip" />
</RelativeLayout >